fixed overflow humberger menu

--- a/css/main.css
+++ b/css/main.css
@@ -28,15 +28,16 @@
   text-transform: uppercase;
 }
 
-.nav__show {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
-}
-
 @media screen and (max-width: 700px) {
   .nav {
     padding: 0;
   }
+}
+
+.nav--show .nav__navbar {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+  display: visible;
 }
 
 .nav__container {
@@ -102,6 +103,7 @@
     text-align: center;
     background: black;
     margin: 0;
+    display: none;
   }
 }
 
@@ -117,7 +119,7 @@
     margin: 0;
     color: #fff;
     background-color: black;
-    padding: 10px;
+    padding: 30px 0 20px 0;
     border-bottom: 1px solid #fff;
   }
 }
@@ -675,6 +677,10 @@
   margin: 0 5px;
 }
 
+.footer__list li .fab:hover {
+  opacity: 0.5;
+}
+
 @media screen and (max-width: 700px) {
   .footer__list li {
     text-align: center;
@@ -837,10 +843,6 @@
   color: #fff;
 }
 
-.footer .fa-2x .fab:hover {
-  opacity: 0.6;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -849,7 +851,7 @@
 }
 
 body {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 a {
