--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -8,20 +8,20 @@
     background: black;
     font-family: $primary-font;
 
-    @include breakpoint(mobile){
+    @include breakpoint(mobile) {
         padding: 20px 30px 20px 30px;
         height: 500px;
         display: flex;
         flex-direction: column;
     }
-    
+
     &__inner {
         display: flex;
         padding: 50px 70px 70px 70px;
         justify-content: space-between;
         position: relative;
 
-        @include breakpoint(mobile){
+        @include breakpoint(mobile) {
             padding: 0;
             justify-content: center;
             flex-direction: column;
@@ -36,18 +36,18 @@
         font-weight: 700;
         color: #fff;
 
-        @include breakpoint(mobile){
-             display: flex;
-             justify-content: center;
-             padding: 20px;
-             letter-spacing: 3px;
+        @include breakpoint(mobile) {
+            display: flex;
+            justify-content: center;
+            padding: 20px;
+            letter-spacing: 3px;
         }
     }
 
     &__list {
         display: flex;
         padding: 0;
-        
+
         @include breakpoint(tablet) {
             font-size: 12px;
         }
@@ -55,38 +55,40 @@
         li {
             margin: 0 5px;
 
-            @include breakpoint(mobile){
-                text-align: center;
+            .fab:hover {
+                opacity: 0.5;
+            }
+
+            @include breakpoint(mobile) {
+                text-align: center
             }
         }
     }
-    
+
     &__left {
         flex: 1;
         position: absolute;
         top: 180px;
-        
-        @include breakpoint(tablet){
-           
-        }
 
-        @include breakpoint(mobile){
+        @include breakpoint(tablet) {}
+
+        @include breakpoint(mobile) {
             position: static;
             justify-content: center;
         }
     }
-    
+
     &__center {
         flex-direction: column;
 
-        @include breakpoint(tablet){
+        @include breakpoint(tablet) {
             font-size: 11px;
             flex-direction: row;
             position: absolute;
             top: 105px;
         }
 
-        @include breakpoint(mobile){
+        @include breakpoint(mobile) {
             flex-direction: column;
             position: static;
             justify-content: center;
@@ -95,24 +97,25 @@
         }
 
         li {
-        margin: 0 0 30px 0;
-            @include breakpoint(mobile){
+            margin: 0 0 30px 0;
+
+            @include breakpoint(mobile) {
                 margin-bottom: 20px;
             }
         }
     }
-    
+
     &__right {
         flex-direction: column;
         text-align: right;
         position: relative;
 
-        @include breakpoint(mobile){
+        @include breakpoint(mobile) {
             position: static;
             margin-top: 112px;
         }
     }
-    
+
     &__invite {
         color: #fff;
         text-transform: uppercase;
@@ -123,46 +126,48 @@
         top: 0;
         left: 130px;
 
-        @include breakpoint(tablet){
-            left:150px;
+        @include breakpoint(tablet) {
+            left: 150px;
         }
 
-        @include breakpoint(mobile){
+        @include breakpoint(mobile) {
             position: static;
             margin: 0;
         }
-        
+
 
         &--link {
             color: #fff;
             text-transform: uppercase;
 
-            @include breakpoint(tablet){
+            @include breakpoint(tablet) {
                 margin-right: 20px;
                 letter-spacing: 2px;
             }
 
-            @include breakpoint(mobile){
+            @include breakpoint(mobile) {
                 margin: 0;
             }
 
-            &:hover  {
+            &:hover {
                 opacity: 0.7;
                 padding-bottom: 6px;
                 border-bottom: 1px solid #fff;
             }
         }
+
         & i {
             position: relative;
             left: 10px;
         }
-        &:hover .fas { 
+
+        &:hover .fas {
             opacity: 0.7;
             padding-left: 20px;
             transition: ease-in-out 0.5s;
         }
     }
-    
+
     &__copy {
         padding-top: 130px;
         color: #727272;
@@ -171,14 +176,12 @@
         letter-spacing: .1em;
         text-transform: capitalize;
 
-        @include breakpoint(mobile){
+        @include breakpoint(mobile) {
             padding-top: 30px;
         }
     }
+
     .fa-2x {
         color: #fff;
-        .fab:hover {
-            opacity: 0.6;
-        }
     }
 }
