--- a/scss/modules/_nav.scss
+++ b/scss/modules/_nav.scss
@@ -13,8 +13,8 @@
     z-index: 999;
     color: #fff;
     cursor: pointer;
-    
-    @include breakpoint(mobile){
+
+    @include breakpoint(mobile) {
         color: black;
     }
 
@@ -33,12 +33,15 @@
     padding: 20px;
     text-transform: uppercase;
 
-    &__show {
-        transform: translateX(0);
+    @include breakpoint(mobile) {
+        padding: 0;
     }
 
-    @include breakpoint(mobile){
-        padding: 0;
+    &--show {
+        .nav__navbar {
+            transform: translateX(0);
+            display: visible;
+        }
     }
 
     &__container {
@@ -49,7 +52,7 @@
         font-size: 2rem;
         color: $text-color;
 
-        @include breakpoint(mobile){
+        @include breakpoint(mobile) {
             position: absolute;
             top: 0;
             left: 0;
@@ -64,14 +67,14 @@
         letter-spacing: 2px;
         margin: 0 0 0 60px;
 
-        @include breakpoint(tablet){
+        @include breakpoint(tablet) {
             margin: 0;
         }
 
-        @include breakpoint(mobile){
+        @include breakpoint(mobile) {
             height: 50%;
             width: 50%;
-            position:absolute;
+            position: absolute;
             top: 0;
             right: 0;
             display: flex;
@@ -81,26 +84,27 @@
             text-align: center;
             background: black;
             margin: 0;
+            display: none;
         }
 
         &--link {
             color: $text-color;
             margin-left: 20px;
-            padding-bottom: 3px;    
-            
-            @include breakpoint(mobile){
+            padding-bottom: 3px;
+
+            @include breakpoint(mobile) {
                 max-height: 400px;
                 margin: 0;
                 color: #fff;
                 background-color: black;
-                padding: 10px;
-                border-bottom: 1px solid #fff; 
+                padding: 30px 0 20px 0;
+                border-bottom: 1px solid #fff;
             }
-        
+
             &:hover {
                 border-bottom: 1px solid black;
 
-                @include breakpoint(mobile){
+                @include breakpoint(mobile) {
                     border: none;
                 }
             }
@@ -122,7 +126,7 @@
             margin-right: 25px;
         }
 
-        @include breakpoint(mobile){
+        @include breakpoint(mobile) {
             position: absolute;
             margin: 0;
             top: 100px;
@@ -135,6 +139,6 @@
             color: black;
             border: 1px solid rgb(153, 153, 153);
             transition: ease-in-out 0.5s;
-        } 
+        }
     }
 }
